--- a/public/vote.html
+++ b/public/vote.html
@@ -1,43 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Vote</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style type="text/css">
-    .col {
-        display: inline-block;
-        width: 99%;
-        padding: 2%;
-    }
-
-    .lean-overlay {
-        height: auto !important;
-    }
-
-    #modal-content {
-        width: 100% !important;
-        height: 100% !important;
-    }
-
-    #toast-container {
-        padding: 5% !important;
-        text-align: center;
-    }
-
-    @media all and (min-width: 720px) {
-        .col {
-            display: inline-block;
-            width: 49%;
-            padding: 2%;
-        }
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/vote.css"/>
 </head>
-
 <body>
     <nav>
         <div class="nav-wrapper">
@@ -60,9 +29,7 @@
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   	<script type="text/javascript" src="/js/materialize.min.js"></script>
-  	<script src="https://d3js.org/d3.v4.min.js"></script>
   	<script type="text/javascript" src="/js/io-square-browser.js"></script>
   	<script type="text/javascript" src="/js/vote.js"></script>
 </body>
-
 </html>
