--- a/public/vote.html
+++ b/public/vote.html
@@ -11,21 +11,18 @@
     <nav>
         <div class="nav-wrapper">
             <a class="center brand-logo col s4" href="/">POLLING APP</a>
+            <div class="col s12" style="padding:10px;">
+              <a href="/" class="breadcrumb">Home</a>
+              <a href="/vote" class="breadcrumb">Vote</a>
+            </div>
         </div>
     </nav>
-    <div>
-        <h3 class="center">Available Polls</h3>
-    </div>
-    <div id="votecards" class="container responsive" style="width:100%">
-    </div>
+    <div id="votecards" class="container responsive" style="width:100%"></div>
     <div id="modal" class="modal responsive">
-        <div id="modal-content" class="modal-content">
-        </div>
+        <div id="modal-content" class="modal-content"></div>
     </div>
     <div id="graph-modal" class="modal responsive">
-        <div id="graph-content" class="modal-content">
-            <!-- <canvas style="width: auto; height: auto;"></canvas> -->
-        </div>
+        <div id="graph-content" class="modal-content"></div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   	<script type="text/javascript" src="/js/materialize.min.js"></script>
